# Noveling

./: README.md
backend/: .example.env  Cargo.toml  Makefile
backend/src/: constants.rs  errors.rs  main.rs
backend/src/api/: auth_api.rs  mod.rs  ping_api.rs  user_api.rs
backend/src/auth/: auth_token.rs  middleware.rs  mod.rs
backend/src/config/: api_config.rs
backend/src/models/: user_model.rs
backend/src/repository/: mongodb_repos.rs
frontend/: .eslintrc.json  .prettierignore  .prettierrc  README.md  package.json  rome.json
frontend/.storybook/: main.js
frontend/components/templates/base/: BaseTemplate.mock.ts  BaseTemplate.stories.tsx  BaseTemplate.tsx
frontend/pages/: _app.tsx  _document.tsx
