[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
dotenv = "0.15.0"
serde = "1.0.151"
futures = "0.3.25"
bcrypt = "0.13.0"
jsonwebtoken = "8.2.0"
chrono = { version = "0.4.23", features = ["serde"] }
config = "0.13.3"
lazy_static = "1.4.0"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"]
