[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
serde = "1.0.151"
futures = "0.3.25"
bcrypt = "0.13.0"
jsonwebtoken = "8.2.0"
chrono = { version = "0.4.23", features = ["serde"] }
config = "0.13.3"
once_cell = "1.17.0"
dotenvy = "0.15.6"
actix-cors = "0.6.4"
env_logger = "0.10.0"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"]
